--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Khadhami Academy | Kids Coding, AI and Robotics Learning App</title>
-  <meta name="description" content="Khadhami Academy helps children learn coding, AI, robotics, and STEM through a bilingual app built for parent trust, child safety, and real outcomes.">
+  <meta name="description" content="Khadhami Academy is a bilingual learning app where families invest in their child’s future through coding, AI, robotics, and STEM with safety and parent trust at the core.">
   <meta name="keywords" content="Khadhami Academy, اكاديمية الخضمي, kids coding app, AI learning for kids, robotics for children, STEM app, bilingual learning app">
   <meta name="author" content="Khadhami Academy">
   <meta name="robots" content="index,follow">
@@ -20,13 +20,13 @@
   <meta property="og:url" content="https://khadhami.com/">
   <meta property="og:site_name" content="Khadhami Academy">
   <meta property="og:title" content="Khadhami Academy | Kids Coding, AI and Robotics Learning App">
-  <meta property="og:description" content="Safe, bilingual learning for children with parent-first trust and structured progress.">
+  <meta property="og:description" content="A smart family investment in your child’s future through safe, structured coding, AI, robotics, and STEM learning.">
   <meta property="og:image" content="https://khadhami.com/assets/images/app-icon.png">
   <meta property="og:image:alt" content="Khadhami Academy app icon">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Khadhami Academy | Kids Coding, AI and Robotics Learning App">
-  <meta name="twitter:description" content="Safe, bilingual learning for children with parent-first trust and structured progress.">
+  <meta name="twitter:description" content="A smart family investment in your child’s future through safe, structured coding, AI, robotics, and STEM learning.">
   <meta name="twitter:image" content="https://khadhami.com/assets/images/app-icon.png">
 
   <link rel="icon" type="image/png" href="assets/images/app-icon.png">
@@ -64,7 +64,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210p">
+  <link rel="stylesheet" href="css/components.css?v=20260210q">
   <link rel="stylesheet" href="css/sections.css?v=20260210l">
   <link rel="stylesheet" href="css/responsive.css?v=20260210i">
 </head>
@@ -753,7 +753,7 @@
     }
   </script>
 
-  <script src="js/i18n.js?v=20260210j"></script>
+  <script src="js/i18n.js?v=20260210l"></script>
   <script src="js/theme.js?v=20260210c"></script>
   <script src="js/animations.js?v=20260210c"></script>
   <script src="js/app.js?v=20260210i"></script>
