--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210q">
+  <link rel="stylesheet" href="css/components.css?v=20260210r">
   <link rel="stylesheet" href="css/sections.css?v=20260210l">
   <link rel="stylesheet" href="css/responsive.css?v=20260210i">
 </head>
@@ -753,7 +753,7 @@
     }
   </script>
 
-  <script src="js/i18n.js?v=20260210l"></script>
+  <script src="js/i18n.js?v=20260210m"></script>
   <script src="js/theme.js?v=20260210c"></script>
   <script src="js/animations.js?v=20260210c"></script>
   <script src="js/app.js?v=20260210i"></script>
