--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210r">
+  <link rel="stylesheet" href="css/components.css?v=20260210s">
   <link rel="stylesheet" href="css/sections.css?v=20260210l">
   <link rel="stylesheet" href="css/responsive.css?v=20260210i">
 </head>
