--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
   <link rel="stylesheet" href="css/components.css?v=20260210s">
   <link rel="stylesheet" href="css/sections.css?v=20260210l">
   <link rel="stylesheet" href="css/responsive.css?v=20260210i">
+
+  <style id="pricing-cta-equality-fix">
+    #pricing .pricing-grid > .pricing-card {
+      min-width: 0;
+    }
+
+    #pricing .pricing-card > .btn.btn--primary {
+      inline-size: 20rem !important;
+      max-inline-size: 100% !important;
+      margin-inline: auto;
+      justify-content: center;
+    }
+
+    @media (max-width: 860px) {
+      #pricing .pricing-card > .btn.btn--primary {
+        inline-size: 100% !important;
+      }
+    }
+  </style>
 </head>
 <body>
   <a class="skip-link" href="#main-content" data-i18n="skip_to_content">Skip to content</a>
@@ -757,5 +776,59 @@
   <script src="js/theme.js?v=20260210c"></script>
   <script src="js/animations.js?v=20260210c"></script>
   <script src="js/app.js?v=20260210i"></script>
+  <script>
+    (function () {
+      var desktopBreakpoint = 860;
+      var desktopButtonWidth = 320;
+      var raf = 0;
+
+      function syncPricingButtons() {
+        var buttons = Array.prototype.slice.call(
+          document.querySelectorAll("#pricing .pricing-card > .btn.btn--primary")
+        );
+        if (buttons.length < 2) return;
+
+        buttons.forEach(function (button) {
+          button.style.maxWidth = "100%";
+          button.style.marginInline = "auto";
+        });
+
+        if (window.innerWidth <= desktopBreakpoint) {
+          buttons.forEach(function (button) {
+            button.style.width = "100%";
+          });
+          return;
+        }
+
+        var parentWidths = buttons
+          .map(function (button) {
+            return button.parentElement ? button.parentElement.clientWidth : 0;
+          })
+          .filter(function (value) {
+            return value > 0;
+          });
+        if (!parentWidths.length) return;
+
+        var targetWidth = Math.floor(Math.min(Math.min.apply(null, parentWidths), desktopButtonWidth));
+        buttons.forEach(function (button) {
+          button.style.width = targetWidth + "px";
+        });
+      }
+
+      function scheduleSync() {
+        if (raf) {
+          window.cancelAnimationFrame(raf);
+        }
+        raf = window.requestAnimationFrame(syncPricingButtons);
+      }
+
+      document.addEventListener("DOMContentLoaded", scheduleSync);
+      window.addEventListener("load", scheduleSync);
+      window.addEventListener("resize", scheduleSync, { passive: true });
+      document.addEventListener("ka:language-change", function () {
+        window.setTimeout(scheduleSync, 40);
+      });
+    })();
+  </script>
 </body>
 </html>
