--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <a href="child-safety-policy.html" data-i18n="link_child_safety">Child Safety Policy</a>
               <a href="data-deletion.html" data-i18n="link_data_deletion">Data Deletion</a>
             </div>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </aside>
         </div>
       </div>
@@ -393,7 +393,7 @@
               <li data-i18n="plan_free_2">Selected live sessions</li>
               <li data-i18n="plan_free_3">Basic progress tracking</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
 
           <article class="pricing-card pricing-card--featured reveal reveal-delay-2">
@@ -408,7 +408,7 @@
               <li data-i18n="plan_pro_3">Offline downloads</li>
               <li data-i18n="plan_pro_4">Priority support</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
         </div>
 
