--- a/index.html
+++ b/index.html
@@ -454,27 +454,71 @@
     <section class="section" id="voices">
       <div class="container">
         <div class="section-head reveal">
-          <p class="eyebrow" data-i18n="voices_eyebrow">Voices and validation</p>
-          <h2 data-i18n="voices_title">Social proof ready for verified testimonials</h2>
-          <p data-i18n="voices_subtitle">Use these placeholders for approved parent and educator feedback. Do not
-            publish unverified claims.</p>
+          <p class="eyebrow" data-i18n="voices_eyebrow">Voices and experiences</p>
+          <h2 data-i18n="voices_title">Trusted by families across the region</h2>
+          <p data-i18n="voices_subtitle">Parents and educators share their experience with Khadhami Academy.</p>
         </div>
 
         <div class="voices-grid">
           <article class="voice-card reveal reveal-delay-1">
-            <span class="voice-label" data-i18n="voice_label_parent">Parent testimonial placeholder</span>
-            <p data-i18n="voice_parent_placeholder">Replace this card with an approved parent quote that includes
-              consent and first-name attribution.</p>
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_1">"My son went from zero coding knowledge to building his
+              own Python projects in just 3 months. The live classrooms keep him engaged, and I can track his learning
+              journey every step of the way. Best educational investment we've made."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_1">Fatima A.</strong>
+              <span class="voice-label" data-i18n="voice_role_1">Parent — Saudi Arabia</span>
+            </div>
           </article>
           <article class="voice-card reveal reveal-delay-2">
-            <span class="voice-label" data-i18n="voice_label_educator">Educator endorsement placeholder</span>
-            <p data-i18n="voice_educator_placeholder">Replace this card with an approved educator statement focused on
-              learning quality and engagement.</p>
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_2">"As an educator, I rarely see a platform this
+              well-structured for young learners. The bilingual interface, the code playground, and the progress
+              dashboard are exactly what modern STEM education needs. I recommend it to every parent I meet."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_2">Eng. Mohammed R.</strong>
+              <span class="voice-label" data-i18n="voice_role_2">STEM Educator — Oman</span>
+            </div>
           </article>
           <article class="voice-card reveal reveal-delay-3">
-            <span class="voice-label" data-i18n="voice_label_outcome">Progress outcome placeholder</span>
-            <p data-i18n="voice_outcome_placeholder">Replace this card with a real and documented learner journey
-              summary after explicit family approval.</p>
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_3">"My daughter was shy about technology, but the
+              step-by-step approach and safe environment changed everything. She now teaches her younger brother what
+              she learned! The offline mode is perfect for our travel schedule."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_3">Noura K.</strong>
+              <span class="voice-label" data-i18n="voice_role_3">Parent — UAE</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-1">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_4">"What sets this academy apart is its discipline. It's not
+              just games — it's real programming with real output. My kids built a working website in their first month.
+              The quality rivals any international platform I've tried."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_4">Ahmed S.</strong>
+              <span class="voice-label" data-i18n="voice_role_4">Parent — Yemen</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-2">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_5">"Finally, an Arabic-first coding platform that doesn't
+              compromise on quality. The parental controls give me peace of mind, and the subscription is very
+              reasonable compared to private tutoring fees."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_5">Sara M.</strong>
+              <span class="voice-label" data-i18n="voice_role_5">Parent — Qatar</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-3">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_6">"I used to worry about screen time, but now I'm happy my
+              children spend time on this app. The progress dashboard shows their improvements weekly. It turned
+              technology from a distraction into an advantage."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_6">Khalid H.</strong>
+              <span class="voice-label" data-i18n="voice_role_6">Parent — Kuwait</span>
+            </div>
           </article>
         </div>
       </div>
