--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               <li data-i18n="plan_free_2">Selected live sessions</li>
               <li data-i18n="plan_free_3">Basic progress tracking</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
 
           <article class="pricing-card pricing-card--featured reveal reveal-delay-2">
@@ -440,7 +440,7 @@
               <li data-i18n="plan_pro_3">Offline downloads</li>
               <li data-i18n="plan_pro_4">Priority support</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
         </div>
 
@@ -448,79 +448,6 @@
           Pro renews monthly. Cancel before renewal to avoid the next charge. Billing and terms are detailed in the
           Terms of Service.
         </p>
-      </div>
-    </section>
-
-    <section class="section" id="voices">
-      <div class="container">
-        <div class="section-head reveal">
-          <p class="eyebrow" data-i18n="voices_eyebrow">Voices and experiences</p>
-          <h2 data-i18n="voices_title">Trusted by families across the region</h2>
-          <p data-i18n="voices_subtitle">Parents and educators share their experience with Khadhami Academy.</p>
-        </div>
-
-        <div class="voices-grid">
-          <article class="voice-card reveal reveal-delay-1">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_1">"My son went from zero coding knowledge to building his
-              own Python projects in just 3 months. The live classrooms keep him engaged, and I can track his learning
-              journey every step of the way. Best educational investment we've made."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_1">Fatima A.</strong>
-              <span class="voice-label" data-i18n="voice_role_1">Parent — Saudi Arabia</span>
-            </div>
-          </article>
-          <article class="voice-card reveal reveal-delay-2">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_2">"As an educator, I rarely see a platform this
-              well-structured for young learners. The bilingual interface, the code playground, and the progress
-              dashboard are exactly what modern STEM education needs. I recommend it to every parent I meet."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_2">Eng. Mohammed R.</strong>
-              <span class="voice-label" data-i18n="voice_role_2">STEM Educator — Oman</span>
-            </div>
-          </article>
-          <article class="voice-card reveal reveal-delay-3">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_3">"My daughter was shy about technology, but the
-              step-by-step approach and safe environment changed everything. She now teaches her younger brother what
-              she learned! The offline mode is perfect for our travel schedule."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_3">Noura K.</strong>
-              <span class="voice-label" data-i18n="voice_role_3">Parent — UAE</span>
-            </div>
-          </article>
-          <article class="voice-card reveal reveal-delay-1">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_4">"What sets this academy apart is its discipline. It's not
-              just games — it's real programming with real output. My kids built a working website in their first month.
-              The quality rivals any international platform I've tried."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_4">Ahmed S.</strong>
-              <span class="voice-label" data-i18n="voice_role_4">Parent — Yemen</span>
-            </div>
-          </article>
-          <article class="voice-card reveal reveal-delay-2">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_5">"Finally, an Arabic-first coding platform that doesn't
-              compromise on quality. The parental controls give me peace of mind, and the subscription is very
-              reasonable compared to private tutoring fees."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_5">Sara M.</strong>
-              <span class="voice-label" data-i18n="voice_role_5">Parent — Qatar</span>
-            </div>
-          </article>
-          <article class="voice-card reveal reveal-delay-3">
-            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
-            <p class="voice-quote" data-i18n="voice_review_6">"I used to worry about screen time, but now I'm happy my
-              children spend time on this app. The progress dashboard shows their improvements weekly. It turned
-              technology from a distraction into an advantage."</p>
-            <div class="voice-author">
-              <strong data-i18n="voice_author_6">Khalid H.</strong>
-              <span class="voice-label" data-i18n="voice_role_6">Parent — Kuwait</span>
-            </div>
-          </article>
-        </div>
       </div>
     </section>
 
@@ -686,6 +613,79 @@
             <p data-i18n="faq_a8">Privacy, Child Safety, Cookie Policy, Terms of Service, and Data Deletion pages are
               available in the legal center.</p>
           </details>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="voices">
+      <div class="container">
+        <div class="section-head reveal">
+          <p class="eyebrow" data-i18n="voices_eyebrow">Voices and experiences</p>
+          <h2 data-i18n="voices_title">Trusted by families across the region</h2>
+          <p data-i18n="voices_subtitle">Parents and educators share their experience with Khadhami Academy.</p>
+        </div>
+
+        <div class="voices-grid">
+          <article class="voice-card reveal reveal-delay-1">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_1">"My son went from zero coding knowledge to building his
+              own Python projects in just 3 months. The live classrooms keep him engaged, and I can track his learning
+              journey every step of the way. Best educational investment we've made."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_1">Fatima A.</strong>
+              <span class="voice-label" data-i18n="voice_role_1">Parent — Saudi Arabia</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-2">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_2">"As an educator, I rarely see a platform this
+              well-structured for young learners. The bilingual interface, the code playground, and the progress
+              dashboard are exactly what modern STEM education needs. I recommend it to every parent I meet."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_2">Eng. Mohammed R.</strong>
+              <span class="voice-label" data-i18n="voice_role_2">STEM Educator — Oman</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-3">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_3">"My daughter was shy about technology, but the
+              step-by-step approach and safe environment changed everything. She now teaches her younger brother what
+              she learned! The offline mode is perfect for our travel schedule."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_3">Noura K.</strong>
+              <span class="voice-label" data-i18n="voice_role_3">Parent — UAE</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-1">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_4">"What sets this academy apart is its discipline. It's not
+              just games — it's real programming with real output. My kids built a working website in their first month.
+              The quality rivals any international platform I've tried."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_4">Ahmed S.</strong>
+              <span class="voice-label" data-i18n="voice_role_4">Parent — Yemen</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-2">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_5">"Finally, an Arabic-first coding platform that doesn't
+              compromise on quality. The parental controls give me peace of mind, and the subscription is very
+              reasonable compared to private tutoring fees."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_5">Sara M.</strong>
+              <span class="voice-label" data-i18n="voice_role_5">Parent — Qatar</span>
+            </div>
+          </article>
+          <article class="voice-card reveal reveal-delay-3">
+            <div class="voice-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <p class="voice-quote" data-i18n="voice_review_6">"I used to worry about screen time, but now I'm happy my
+              children spend time on this app. The progress dashboard shows their improvements weekly. It turned
+              technology from a distraction into an advantage."</p>
+            <div class="voice-author">
+              <strong data-i18n="voice_author_6">Khalid H.</strong>
+              <span class="voice-label" data-i18n="voice_role_6">Parent — Kuwait</span>
+            </div>
+          </article>
         </div>
       </div>
     </section>
