--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <meta name="description"
     content="Khadhami Academy is a bilingual learning app where families invest in their child’s future through coding, AI, robotics, and STEM with safety and parent trust at the core.">
   <meta name="keywords"
-    content="Khadhami Academy, اكاديمية الخضمي, kids coding app, AI learning for kids, robotics for children, STEM app, bilingual learning app">
+    content="Khadhami Academy, اكاديمية الخضمي, kids coding app, تعليم البرمجة للأطفال, AI learning for kids, الذكاء الاصطناعي, robotics for children, الروبوتات, STEM app, bilingual learning app, تطبيق تعليمي, coding for kids, learn Python, تعلم بايثون">
   <meta name="author" content="Khadhami Academy">
-  <meta name="robots" content="index,follow">
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1">
   <meta name="theme-color" content="#205090">
   <meta name="color-scheme" content="light dark">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="اكاديمية الخضمي">
 
   <link rel="canonical" href="https://khadhami.com/">
   <link rel="alternate" hreflang="en" href="https://khadhami.com/">
@@ -27,6 +31,10 @@
     content="A smart family investment in your child’s future through safe, structured coding, AI, robotics, and STEM learning.">
   <meta property="og:image" content="https://khadhami.com/assets/images/app-icon.png">
   <meta property="og:image:alt" content="Khadhami Academy app icon">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:height" content="512">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="ar_SA">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Khadhami Academy | Kids Coding, AI and Robotics Learning App">
@@ -422,7 +430,8 @@
               <li data-i18n="plan_free_2">Selected live sessions</li>
               <li data-i18n="plan_free_3">Basic progress tracking</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app"
+              style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
 
           <article class="pricing-card pricing-card--featured reveal reveal-delay-2">
@@ -440,7 +449,8 @@
               <li data-i18n="plan_pro_3">Offline downloads</li>
               <li data-i18n="plan_pro_4">Priority support</li>
             </ul>
-            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app" style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app"
+              style="width:min(100%,20rem);margin-inline:auto;">Get the app</a>
           </article>
         </div>
 
