--- a/index.html
+++ b/index.html
@@ -783,8 +783,7 @@
           </a>
           <a class="legal-card" href="data-deletion.html">
             <h3 data-i18n="link_data_deletion">Data Deletion</h3>
-            <p data-i18n="legal_card_data_deletion">Full account deletion and complete personal data removal from
-              database.</p>
+            <p data-i18n="legal_card_data_deletion">Full account deletion and complete removal of personal data.</p>
           </a>
         </div>
       </div>
